--- a/css/site.css
+++ b/css/site.css
@@ -1,4 +1,4 @@
-:root {
+:root{
     --primary-color: #1d5888;
     --secondary-color: #ff993b;
     --dark-color: #292929;
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: var(--white-color);
+    color: var(--dark-color);
 }
 
 nav{
@@ -17,9 +17,12 @@ footer{
     background-color: var(--dark-color);
 }
 
+
 h1,h2,h3,h4,h5,h6{
     color: var(--primary-color);
 }
+
+
 
 main>.container {
     padding: 60px 15px 0;
