--- a/css/site.css
+++ b/css/site.css
@@ -41,3 +41,10 @@ main>.container {
     bottom: 0;
     width: 100%;
 }
+
+code[class*="language-"],
+pre[class*="language-"] {
+white-space: pre-wrap;
+word-break: break-all;
+word-wrap: break-word;
+}
